# robot_simulation

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  FINAL_SUMMARY.md  PUSH_SUMMARY.md  README.md  WINDOW_SETTINGS.md  build.sh  capture_screenshot.sh  keyboard_test_results.md  performance_summary.md  run_robot.sh  run_with_vsg.sh  test_visible_noise.md
.cache/clangd/index/: PhysicsWorld.cpp.1479949427B690C3.idx  PhysicsWorld.h.6A7D3497C638868C.idx  PositionUtils.h.39A60BD5C83415FA.idx  Robot.cpp.63C588EECAB54F90.idx  Robot.h.4CEF72F39FF61F60.idx  RobotController.cpp.9F312685A6CA1D85.idx  RobotController.h.E8A9B6201D748E31.idx  Terrain.cpp.C5FBBBB2A68F5DBE.idx  Terrain.h.4B57333619A4E682.idx  Visualizer.cpp.9E1B97F36B318F1D.idx  Visualizer.h.74432D9BAF1E8938.idx  main.cpp.66A89B2340A0F05C.idx  test_vsg.cpp.D6E34AF412511DE7.idx
.github/workflows/: ci.yml  claude-dispatch.yml
cmake/: FindODE.cmake
include/: Actuator.h  ComprehensiveEventDebugger.h  ControlAlgorithms.h  DebugOutput.h  EnhancedRobotController.h  FallbackTypes.h  InputHandler.h  NoiseManager.h  PhysicsWorld.h  PositionUtils.h  Robot.h  RobotController.h  Sensor.h  Terrain.h  TestEventHandler.h  Visualizer.h
noise/: mac_drand48r.cpp  mac_drand48r.h  noisegenerator.h  randomgenerator.h
src/: Actuator.cpp  ControlAlgorithms.cpp  ControlAlgorithmsDemo.cpp  DebugOutput.cpp  EnhancedRobotController.cpp  InputHandler.cpp  InputHandler_fixed.cpp  NoiseManager.cpp  PhysicsWorld.cpp  Robot.cpp  RobotController.cpp  Sensor.cpp  Terrain.cpp  Visualizer.cpp  VisualizerHexapodConfig.h  main.cpp  minimal_vsg_test.cpp  test_vsg.cpp
